--- a/src/main/resources/static/huploadify/demo.html
+++ b/src/main/resources/static/huploadify/demo.html
@@ -19,7 +19,7 @@ $(function(){
 		showUploadedPercent:true,//是否实时显示上传的百分比，如20%
 		showUploadedSize:true,
 		removeTimeout:9999999,
-		uploader:'upload.php',
+		uploader:'/sbe/uploads/upload1',
 		onUploadStart:function(){
 			//alert('开始上传');
 			},
